# toolkit

./: .env.example  .gitattributes  .gitignore  DEV_SETUP.md  README.md  dev-setup.sh
actions/govbot/: .gitignore  Cargo.toml  README.md  TAGGING.md  action.yml  govbot.yml  justfile
actions/govbot/examples/: govbot-clone-list.sh  govbot-help.sh  logs-basic.sh
actions/govbot/scripts/: generate-dcat-all.sh  generate-dcat.py  install-nightly.sh  patch.sh  symlink-logs-all.sh  symlink-logs.py  symlink-logs.sh
actions/govbot/src/: config.rs  embeddings.rs  error.rs  filter.rs  git.rs  lib.rs  locale_generated.rs  main.rs  processor.rs  publish.rs  rss.rs  selectors.rs  similarity.rs  types.rs
actions/govbot/src/filters/ak-legislation/: default.rs
actions/govbot/src/filters/al-legislation/: default.rs
actions/govbot/src/filters/ar-legislation/: default.rs
actions/govbot/src/filters/az-legislation/: default.rs
actions/govbot/src/filters/ca-legislation/: default.rs
actions/govbot/src/filters/co-legislation/: default.rs
actions/govbot/src/filters/ct-legislation/: default.rs
actions/govbot/src/filters/de-legislation/: default.rs
actions/govbot/src/filters/fl-legislation/: default.rs
actions/govbot/src/filters/ga-legislation/: default.rs
actions/govbot/src/filters/gu-legislation/: default.rs
actions/govbot/src/filters/hi-legislation/: default.rs
actions/govbot/src/filters/ia-legislation/: default.rs
actions/govbot/src/filters/id-legislation/: default.rs
actions/govbot/src/filters/il-legislation/: default.rs
actions/govbot/src/filters/in-legislation/: default.rs
actions/govbot/src/filters/ks-legislation/: default.rs
actions/govbot/src/filters/ky-legislation/: default.rs
actions/govbot/src/filters/la-legislation/: default.rs
actions/govbot/src/filters/ma-legislation/: default.rs
actions/govbot/src/filters/md-legislation/: default.rs
actions/govbot/src/filters/me-legislation/: default.rs
actions/govbot/src/filters/mi-legislation/: default.rs
actions/govbot/src/filters/mn-legislation/: default.rs
actions/govbot/src/filters/mo-legislation/: default.rs
actions/govbot/src/filters/mp-legislation/: default.rs
actions/govbot/src/filters/ms-legislation/: default.rs
actions/govbot/src/filters/mt-legislation/: default.rs
actions/govbot/src/filters/nc-legislation/: default.rs
actions/govbot/tests/: api_snaps.rs  cli_example_snaps.rs  cli_snapshots_from_examples.rs
actions/govbot/tests/snapshots/: api_snaps__log_entry_structure.snap  api_snaps__pipeline_output.snap  api_snaps__vote_event_results.snap  api_snapshot_tests__pipeline_output.snap  api_snapshot_tests__vote_event_results.snap  cli_example_snaps__snapshot@govbot_clone_list.snap  cli_example_snaps__snapshot@govbot_help.snap  cli_example_snaps__snapshot@logs_basic.snap  cli_example_snaps__stdout@govbot_help_stdout.snap  cli_example_snaps__stdout@logs_basic_stdout.snap  cli_snapshots_from_examples__stdout@cli_snapshots_from_examples__basic_stdout.snap
pod-to-openapi/: Cargo.toml  README.md  openapi.yaml
pod-to-openapi/src/: lib.rs  main.rs  parser.rs  schema_loader.rs  transformer.rs  types.rs
scripts/gov-data-to-openapi/: Cargo.toml
scripts/gov-data-to-openapi/src/: main.rs
(+31415 files in other folders)
