[package]
name = "pod-to-openapi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pod2openapi"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

